<resources>
    <string name="app_name">VDEE</string>
    <string name="app_title">El Evangelio Eterno</string>
    <string name="play">PLAY</string>
    <string name="vdee">http://www.vdee.org:8000/salinas</string>
    <string name="network_error">Compruebe su conexión a Internet y vuelva a intentarlo</string>
    <string name="radio_info_title">Programación Díaria\n(Hora Pacífico)</string>
    <string name="radio_info_content">Música Para Orar:\n3am - 7am \nPredicaciones de 30 Minutos:\n 7:00 am, 9:00 am,\n 12:00 pm, 3:00 pm, 6:00 pm, 9:00 pm</string>
    <string name="musica_de_adoracion">Cantos de Adoración</string>

    <string name="vdee_link">https://play.google.com/store/apps/details?id=vdee.evalverde.vdee</string>
    <string name="vdee_share_content_description">"Escuche predicaciones por el Pastor Efraim Valverde Sr. y cantos de adoracion atravez de VDEE\n"</string>
    <string name="vdee_share_title">Share VDEE</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inicio">inicio</string>
    <string name="maranatha">Maranatha</string>
    <string name="biblia">Biblia</string>
    <string name="contact">Contáctenos</string>
    <string name="continuar">CONTINUAR</string>
    <string name="cargando">cargando...</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Contact Us Strings-->
    <string name="vdee__correo">Correo</string>
    <string name="vdee__correo_address">Ministerios Efraim Valverde Sr. \n PO BOX 10271, Salinas, CA 93912</string>
    <string name="vdee__phone_title">Teléfono</string>
    <string name="vdee__phone_description">Llámenos por teléfono al \n (831) 422-0647</string>
    <string name="vdee__santuary_title">Santuario Local</string>
    <string name="vdee__templo_filadelphia">Templo Filadelfia</string>
    <string name="vdee__templo_address">160 Pajaro St \n Salinas, CA 93901</string>
    <string name="vdee__servicios_title">Servicios:</string>
    <string name="vdee__servicios_dates">Miércoles 7:00pm \nDomingo 12:15pm</string>
</resources>
